@@ -15,7 +15,6 @@
  */
 package com.proofpoint.discovery.store;
 
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
 import com.proofpoint.discovery.Id;
 import com.proofpoint.discovery.InitializationTracker;
@@ -49,7 +48,7 @@ public class TestReplicator
     private static final Service TESTING_SERVICE_2 = new Service(Id.random(), NODE_ID,"type2", "test-pool", "/test-location", ImmutableMap.of("https", "https://127.0.0.1"));
     private static final Entry TESTING_ENTRY = entry(
             NODE_ID.getBytes(),
-            ImmutableList.of(TESTING_SERVICE_1, TESTING_SERVICE_2),
+            List.of(TESTING_SERVICE_1, TESTING_SERVICE_2),
             System.currentTimeMillis(),
             20_000L,
             "127.0.0.1"
